2010-09-17 [wwp]	3.7.6cvs36

	* doc/man/claws-mail.1
	Update --compose documentation in `man claws-mail`.

2010-09-12 [pawel]	3.7.6cvs35

	* src/compose.c
		Add forgotten bit to previous commit,
		select email account when replying to ML

2010-09-12 [pawel]	3.7.6cvs34

	* src/compose.c
		Fix bug #2247 "nntp reply-to-all broken?"
		Make reply-to-all and reply-to-ml work as expected in
		mailing list through NNTP case

2010-09-11 [pawel]	3.7.6cvs33

	* src/mainwindow.c
	* src/summaryview.c
	* src/toolbar.c
		gtk_widget_set_can_focus() -> GTK_WIDGET_UNSET_FLAGS()
		fixes build with GTK+ < 2.18

2010-09-10 [pawel]	3.7.6cvs32

	* src/mainwindow.c
	* src/summaryview.c
	* src/toolbar.c
		Make Tab key switch between FolderView, MsgView and
		SummaryView only, other widgets have/can have their own
		keybindings anyway

2010-08-25 [colin]	3.7.6cvs31

	* src/procmime.c
	* AUTHORS
	* src/gtk/authors.h
	* src/common/base64.c
	* src/common/base64.h
		Fix bug #2245, "base64 decoding fails with line breaks"
		Patch by Yotam Medini

2010-08-25 [colin]	3.7.6cvs30

	* src/main.c
		Fix bug #2241, "Empty trash on exit fails on scripted exit"

2010-08-23 [pawel]	3.7.6cvs29

	* src/inc.c
	* src/send_message.c
	* src/statusbar.c
	* src/toolbar.c
		Hide progressbar on statusbar when not needed

2010-08-17 [colin]	3.7.6cvs28

	* src/main.c
		Fix previous patch (our own tmp dir is inside
		our rc dir)

2010-08-16 [colin]	3.7.6cvs27

	* src/main.c
		Use temp dir to store logs in Windows. Avoids doing
		get_rc_dir() early, which prevents set_rc_dir()
		working correctly.

2010-07-31 [holger]	3.7.6cvs26

	* src/gtk/gtkshruler.c
		Yet more GdkGC to Cairo porting

2010-07-30 [holger]	3.7.6cvs25

	* src/stock_pixmap.c
		More GdkGC to Cairo porting

2010-07-30 [holger]	3.7.6cvs24

	* src/gtk/colorlabel.c
		One GdkGC usage less

2010-07-29 [holger]	3.7.6cvs23

	* src/printing.c
		Replace some gdk drawing with cairo, as the former
		is going towards deprecation.

2010-07-25 [colin]	3.7.6cvs22
